# agent-communication-protocol

./: .dockerignore  .gitignore  404.html  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  Dockerfile  README.md  SKILL.md  acp_diag.sh  acp_diag2.sh  docker-compose.yml  heartbeat-state.json  heartbeat_cd_results.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docker-publish.yml  docs.yml
CHANGELOG/: index.html
README.zh-CN/: index.html
ROADMAP/: index.html
acp-research/: ROADMAP.md
acp-research/reports/: 2026-03-19-a2a-evening-scan.md  2026-03-19-late-scan.md  2026-03-21-a2a-scan.md  2026-03-21-research-scan.md  2026-03-21-research.md  2026-03-22-a2a-heartbeat-agent.md  2026-03-22-a2a-issue-1667-update.md  2026-03-22-did-acp-design.md  2026-03-24-scan.md  2026-03-24-scan2.md  2026-03-24-scan3.md  2026-03-24-scan4.md  2026-03-25-scan-3.md  2026-03-25-scan.md  2026-03-25-scan2.md  2026-03-25-scan3.md  2026-03-26-scan.md  2026-03-26-scan2.md  2026-03-26-scan3.md  2026-03-26-scan4.md  2026-03-28-scan.md  2026-03-29-scan.md  2026-03-30-scan.md
adrs/: adr-001-p2p-relay-architecture.md  adr-002-no-oauth-ed25519-only.md  adr-003-event-replay-since-seq.md  adr-004-jwks-compat-layer.md  adr-template.md
assets/: extra.css
benchmark-2026-03-23/: index.html
blog/: index.html
blog/2026-03-23-acp-v1-3-announcement/: index.html
blog/2026-03-23-hn-post-draft/: index.html
blog/2026-03-24-hn-post-final/: index.html
cli-reference/: index.html
comparison/: index.html
conformance/: index.html
docs/: CHANGELOG.md  README.zh-CN.md  ROADMAP.md  benchmark-2026-03-23.md  cli-reference.md  comparison.md  conformance.md  index.md  integration-guide.md  nat-traversal.md  security.md  show-hn-draft.md  whats-new.md
docs/blog/: 2026-03-23-acp-v1-3-announcement.md  2026-03-23-hn-post-draft.md  2026-03-24-hn-post-final.md  index.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: team-collaboration.md  two-agents.md
docs/spec/: core-v0.8.md  transports.md
examples/orchestrator-workers/: demo.py
examples/quickstart/: agent_summarizer.py  demo_two_agents.py  orchestrator.py
gateway/: Dockerfile  docker-compose.yml  server.py
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/team-collaboration/: index.html
guides/two-agents/: index.html
integration-guide/: index.html
nat-traversal/: index.html
p2p/examples/: demo_group.py  demo_lifecycle.py  demo_p2p.py
p2p/sdk/: acp_p2p.py
p2p/skill/: SKILL.md  SKILL.zh.md
p2p/spec/: acp-p2p-v0.1.md  acp-p2p-v0.1.zh.md
relay/: SKILL.md  acp_github_relay.py  acp_relay.py  acp_worker.js  identity.py  install-acp-skill.md  relay_server.py
relay/examples/: config-relay.json  config-secure.yaml  config.json
relay/references/: modes.md
research/: 2026-03-18-competitive-analysis.md  2026-03-18-protocol-landscape-v2.md  RESEARCH-PROTOCOL.md  ROADMAP.md
research/reports/: 2026-03-19-a2a-deep-dive.md  2026-03-19-queryskill-analysis.md  2026-03-20-a2a-afternoon-scan.md  2026-03-20-a2a-evening-scan.md  2026-03-20-a2a-morning-scan.md  2026-03-20-a2a-night-scan.md  2026-03-20-a2a-noon-scan.md  2026-03-20-aps-ed25519-analysis.md  2026-03-20-morning-scan.md
research/weekly/: 2026-03-25-weekly-scan.md
sdk/go/: README.md  go.mod
sdk/go/acprelay/: client.go  client_test.go  stream.go  stream_test.go
sdk/java/: README.md  pom.xml
sdk/node/: .npmignore  LICENSE  README.md  package.json
sdk/node/src/: index.d.ts  index.js  index.mjs  relay_client.js
sdk/python/: README-sdk.md  pyproject.toml  setup.py
sdk/python/acp_client/: __init__.py  _cli.py  async_client.py  client.py  exceptions.py  models.py
sdk/python/acp_client/integrations/: __init__.py  langchain.py
sdk/python/acp_sdk/: __init__.py  agent.py  bus.py  client.py  message.py  relay_client.py
sdk/python/acp_sdk/integrations/: __init__.py  autogen.py  fastapi_middleware.py  langchain.py
sdk/python/tests/: test_async_relay_client.py  test_langchain_integration.py  test_message.py  test_relay_client.py  test_relay_client_v17.py  test_sdk_package.py  test_v23_features.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
search/: search_index.json
security/: index.html
show-hn-draft/: index.html
spec/: compatibility-certification.md  core-v0.1.md  core-v0.1.zh.md  core-v0.5.md  core-v1.0.md  core-v1.3.md  error-codes.md  identity-v0.8.md  identity-v1.5.md  identity.md  nat-traversal-v1.4.md  transports.md  transports.zh.md  v0.6-minimal-agent.md  v0.8-planning.md  v1.0-planning.md
spec/core-v0.8/: index.html
spec/nat-traversal-v1.4/: index.html
spec/transports/: index.html
tests/: conftest.py  helpers.py  run_scenario_ab_test.py  run_scenario_cd_heartbeat.py  test_availability.py  test_availability_schedule.py  test_b_three_agents.py  test_bug037_messages_received.py  test_card_signature.py  test_concurrent.py  test_context_id_sse.py  test_context_query.py  test_dcutr.py  test_dcutr_t1_stun.py  test_dcutr_t2_messages.py  test_dcutr_t3_fallback.py  test_dcutr_t4_handshake.py  test_dcutr_t6_scenario_a.py  test_delegation_chain.py  test_event_replay.py  test_extensions.py  test_http2_transport.py  test_identity.py  test_jwks.py  test_lan_discovery.py  test_limitations.py  test_messages_list.py  test_nat_http_reflect.py  test_nat_integration.py  test_nat_signaling.py  test_nat_traversal_integration.py  test_offline_queue.py  test_peer_card_verify.py  test_reconnect.py  test_round12_b.py  test_round12_c.py  test_round_20260328.py  test_scenario_bc.py  test_scenario_d.py  test_scenario_d_stress.py  (+13 more)
tests/cert/: test_level1.py
tests/compat/: README.md  compat_base.py  run.py  test_agentcard.py  test_error_codes.py  test_hmac.py  test_message_send.py  test_peers.py  test_query_skills.py  test_stream.py  test_tasks.py
tests/integration/: conftest.py  test_relay_integration.py
tests/unit/: test_relay_core.py  test_transport_modes_v24.py
whats-new/: index.html
(+13 files in other folders)
