[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-client"
version = "1.7.0"
description = "Python SDK for the Agent Communication Protocol (ACP) — RelayClient & AsyncRelayClient"
readme = "README-sdk.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "ACP Community", email = "acp@example.com" },
]
keywords = ["acp", "agent", "communication", "protocol", "sdk", "relay"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

# Python >= 3.9 required; zero mandatory dependencies (stdlib only)
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
# HTTP/2 support via h2
http2 = ["h2>=4.0"]
# Native async HTTP (experimental)
async = ["httpx>=0.27"]
# LangChain Tool adapter (ACPTool, ACPCallbackHandler)
langchain = ["langchain>=0.1.0"]
# Full development environment
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "h2>=4.0",
    "httpx>=0.27",
]

[project.scripts]
acp-client = "acp_client._cli:main"

[project.urls]
Homepage    = "https://github.com/Kickflip73/agent-communication-protocol"
Repository  = "https://github.com/Kickflip73/agent-communication-protocol"
Issues      = "https://github.com/Kickflip73/agent-communication-protocol/issues"
Changelog   = "https://github.com/Kickflip73/agent-communication-protocol/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["acp_client*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
